--- a/deep-high-resolution-net.pytorch/experiments/atrw/w48_384x288.yaml
+++ b/deep-high-resolution-net.pytorch/experiments/atrw/w48_384x288.yaml
@@ -26,7 +26,7 @@ MODEL:
   INIT_WEIGHTS: true
   NAME: pose_hrnet
   NUM_JOINTS: 15
-  PRETRAINED: 'models/pytorch/imagenet/hrnet_w48.pth'
+  PRETRAINED: 'models/pytorch/imagenet/hrnet_w48-8ef0771d.pth'
   TARGET_TYPE: gaussian
   IMAGE_SIZE:
   - 384
@@ -112,8 +112,7 @@ TEST:
   BBOX_THRE: 1.0
   IMAGE_THRE: 0.0
   IN_VIS_THRE: 0.2
-#  MODEL_FILE: '/home/wh/deep-high-resolution-net.pytorch/result/atrw/pose_hrnet/w48_384x288_OANW0731/model_best.pth'
-  MODEL_FILE: ''
+  MODEL_FILE: 'output/model_best.pth'
   NMS_THRE: 1.0
   OKS_THRE: 0.9
   USE_GT_BBOX: true
